Adding package and Message model

--- a/Chating Application/Chating Application.csproj
+++ b/Chating Application/Chating Application.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Chating_Application</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.0" />
+  </ItemGroup>
+
+	
 </Project>
